# cpp_tech_demos

./: .gitignore  CMakeLists.txt  LICENSE  logging.hpp
cmake/: utility_functions.cmake
concepts/: CMakeLists.txt  temp_start.cpp
docs/: CMakeLists.txt  Doxyfile.in
mongodb/: CMakeLists.txt  mongo_cxx.cpp
mpi/: CMakeLists.txt  datatype.hpp  mpi_demo.cpp  one_sided.cpp  one_sided_fenced.cpp  one_sided_mutex.cpp  provoke_open_requests.cpp  simple_comm.cpp  simple_comm_config.hpp  simple_comm_rma.cpp  simple_comm_rma_get.cpp  simple_comm_rma_get_split.cpp  simple_comm_rma_put.cpp  split_comms.cpp
mpi/simple_comm/: CMakeLists.txt  simple_comm.cpp  simple_comm_config.hpp  simple_comm_isend.cpp  simple_comm_rma_get.cpp  simple_comm_rma_get_old_onefile.cpp  simple_comm_rma_get_onefile.cpp  simple_comm_rma_get_split.cpp  simple_comm_rma_put.cpp
qt5/: CMakeLists.txt
std/: CMakeLists.txt  exceptions.cpp  inheritance.cpp  mixins.cpp  static_poly.cpp  template_inherit.cpp
std/static_poly/: encap.hpp  encap_manager.hpp  static_poly_traits.hpp
